--- a/src/sample-data/project.json
+++ b/src/sample-data/project.json
@@ -1,78 +1,92 @@
 {
-    "name": "Cool project name",
+    "name": "Sample extension project",
     "type": "ios",
     "density": "1x",
-    "prefix": "cpn",
     "colors": [
         {
-            "r": 93,
-            "g": 121,
-            "b": 231,
+            "r": 255,
+            "g": 0,
+            "b": 0,
             "a": 1,
-            "name": "softBlue",
-            "_id": "5a5f48b83b50218116f2d3ba"
+            "name": "red"
         },
         {
-            "r": 49,
-            "g": 128,
-            "b": 237,
+            "r": 0,
+            "g": 255,
+            "b": 0,
             "a": 1,
-            "name": "darkSkyBlue",
-            "_id": "5a5f48ba3b50218116f2d3bb"
+            "name": "green"
         },
         {
-            "r": 144,
-            "g": 135,
-            "b": 230,
+            "r": 0,
+            "g": 0,
+            "b": 255,
             "a": 1,
-            "name": "perrywinkle",
-            "_id": "5a5f48bb3b50218116f2d3bc"
+            "name": "blue"
+        },
+        {
+            "r": 255,
+            "g": 255,
+            "b": 0,
+            "a": 1,
+            "name": "yellow"
+        },
+        {
+            "r": 0,
+            "g": 0,
+            "b": 0,
+            "a": 1,
+            "name": "black"
+        },
+        {
+            "r": 0,
+            "g": 0,
+            "b": 0,
+            "a": 0.5,
+            "name": "black50"
         },
         {
             "r": 255,
             "g": 255,
             "b": 255,
             "a": 1,
-            "name": "white",
-            "_id": "5a5f48c53b50218116f2d3bd"
+            "name": "white"
         }
     ],
     "textStyles": [
         {
-            "name": "Text Style",
-            "fontFace": "Montserrat-Regular",
+            "name": "Sample text style",
+            "fontFace": "SFProText-Regular",
             "fontSize": 20,
+            "fontWeight": 400,
+            "fontStyle": "normal",
+            "fontFamily": "SFProText",
+            "fontStretch": "normal",
+            "textAlign": "left",
+            "weightText": "regular",
             "color": {
-                "a": 1,
-                "b": 255,
-                "g": 255,
-                "r": 255
-            },
-            "_id": "5a5f48c73b50218116f2d3be"
+                "r": 0,
+                "g": 0,
+                "b": 0,
+                "a": 1
+            }
         },
         {
-            "name": "Text Style 2",
-            "fontFace": "Montserrat-Regular",
-            "fontSize": 144,
+            "name": "Sample text style with color",
+            "fontFace": "SFProText-Regular",
+            "fontSize": 20,
+            "fontWeight": 400,
+            "fontStyle": "normal",
+            "fontFamily": "SFProText",
+            "fontStretch": "normal",
+            "textAlign": "left",
+            "weightText": "regular",
             "color": {
-                "a": 1,
-                "b": 18,
-                "g": 10,
-                "r": 8
-            },
-            "_id": "5a5f48c93b50218116f2d3bf"
-        },
-        {
-            "name": "Text Style 3",
-            "fontFace": "Montserrat-Regular",
-            "fontSize": 16,
-            "color": {
-                "a": 1,
-                "b": 208,
-                "g": 139,
-                "r": 124
-            },
-            "_id": "5a5f48ce3b50218116f2d3c0"
+                "r": 255,
+                "g": 0,
+                "b": 0,
+                "a": 1
+            }
         }
     ]
 }
