--- a/src/template/manifest.json
+++ b/src/template/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "My Extension",
-    "description": "Test extension",
+    "name": "Sample Extension",
+    "description": "Sample extension description.",
     "version": "1.0.0",
     "options": [{
         "name": "Sample option",
