--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "zeplin-extension-manager": "./src/index.js"
   },
   "dependencies": {
+    "@zeplin/extension-model": "^1.1.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
@@ -24,8 +25,7 @@
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.2",
-    "webpack-merge": "^4.1.2",
-    "zeplin-extension-model": "git+ssh://git@github.com/zeplin/zeplin-extension-model.git#v1.x.x"
+    "webpack-merge": "^4.1.2"
   },
   "devDependencies": {
     "@zeplin/eslint-config": "^1.2.2"
