--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zeplin/extension-manager",
+  "name": "zem",
   "version": "0.1.0",
   "description": "Create and test Zeplin extensions with no build configuration",
   "homepage": "https://zeplin.io",
@@ -11,13 +11,13 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zeplin/extension-manager.git"
+    "url": "https://github.com/zeplin/zem.git"
   },
   "engines": {
     "node": ">=6"
   },
   "bin": {
-    "zeplin-extension-manager": "./src/index.js"
+    "zem": "./src/index.js"
   },
   "files": [
     "src"
