--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build_and_test:
     docker:
-      - image: circleci/node:8
+      - image: zeplin/amazon-linux-ami:cci-node8
     steps:
       - checkout
       - restore_cache:
@@ -16,7 +16,7 @@ jobs:
 
   publish:
       docker:
-      - image: circleci/node:8
+      - image: zeplin/amazon-linux-ami:cci-node8
       steps:
         - checkout
         - run:
