--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@zeplin/extension-model": "^1.1.1",
+    "adm-zip": "^0.4.11",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
@@ -35,7 +36,11 @@
     "eslint": "^4.18.1",
     "eslint-loader": "^2.0.0",
     "fs-extra": "^5.0.0",
+    "jsonwebtoken": "^8.3.0",
     "prismjs": "^1.11.0",
+    "prompts": "^0.1.14",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.2",
