--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,10 @@ workflows:
   build_test_and_publish:
     jobs:
       # Run the build_and_test for all branches
-      - build_and_test
+      - build_and_test:
+          filters:  # required since `deploy` has tag filters AND requires `build`
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*/
       - publish:
           requires:
             - build_and_test
