--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "lint": "eslint ./src"
   },
   "dependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "@zeplin/extension-model": "^1.1.1",
     "adm-zip": "^0.4.11",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.6.1",
     "chalk": "^2.3.1",
     "commander": "^2.14.1",
@@ -41,9 +43,8 @@
     "prompts": "^0.1.14",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
-    "uglifyjs-webpack-plugin": "^1.2.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.2",
+    "webpack": "^4.41.5",
+    "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.1.2"
   },
   "devDependencies": {
