--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
   "dependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@zeplin/extension-model": "^1.1.1",
+    "@types/jest": "^25.1.2",
+    "@zeplin/extension-model": "^2.4.0",
     "adm-zip": "^0.4.11",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
     "chalk": "^2.3.1",
     "commander": "^2.14.1",
     "eslint": "^4.18.1",
     "eslint-loader": "^2.0.0",
     "fs-extra": "^5.0.0",
+    "jest": "^25.1.0",
     "jsonwebtoken": "^8.3.0",
     "prismjs": "^1.11.0",
     "prompts": "^0.1.14",
