--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prompts": "^0.1.14",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
+    "update-notifier": "^4.0.0",
     "webpack": "^4.41.5",
     "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.1.2"
