--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "adm-zip": "^0.4.11",
     "babel-loader": "^8.0.6",
     "chalk": "^2.3.1",
+    "ci-info": "^2.0.0",
     "commander": "^2.14.1",
     "eslint": "^4.18.1",
     "eslint-loader": "^2.0.0",
     "fs-extra": "^5.0.0",
+    "http-status-codes": "^1.4.0",
     "jsonwebtoken": "^8.3.0",
     "prismjs": "^1.11.0",
-    "prompts": "^0.1.14",
+    "prompts": "^2.3.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "update-notifier": "^4.0.0",
