--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@babel/preset-env": "^7.8.4",
     "@zeplin/extension-model": "^2.5.1",
     "adm-zip": "^0.4.11",
+    "ajv": "^6.12.0",
     "babel-loader": "^8.0.6",
+    "case": "^1.6.2",
     "chalk": "^2.3.1",
     "ci-info": "^2.0.0",
     "commander": "^2.14.1",
@@ -49,6 +51,7 @@
     "webpack-merge": "^4.1.2"
   },
   "devDependencies": {
+    "@types/fs-extra": "^5.0.0",
     "@zeplin/eslint-config": "^1.2.2"
   },
   "eslintConfig": {
