--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "dependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
+    "@types/jest": "^25.1.2",
     "@zeplin/extension-model": "^2.5.1",
     "adm-zip": "^0.4.11",
     "ajv": "^6.12.0",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
     "case": "^1.6.2",
     "chalk": "^2.3.1",
@@ -40,6 +42,7 @@
     "eslint-loader": "^2.0.0",
     "fs-extra": "^5.0.0",
     "http-status-codes": "^1.4.0",
+    "jest": "^25.1.0",
     "jsonwebtoken": "^8.3.0",
     "prismjs": "^1.11.0",
     "prompts": "^2.3.1",
@@ -52,7 +55,8 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.0",
-    "@zeplin/eslint-config": "^1.2.2"
+    "@zeplin/eslint-config": "^1.2.2",
+    "npm-merge-driver-install": "^1.1.1"
   },
   "eslintConfig": {
     "extends": "@zeplin/eslint-config/node",
