--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "chalk": "^2.3.1",
     "ci-info": "^2.0.0",
     "commander": "^2.14.1",
+    "core-js": "^3.6.4",
     "eslint": "^4.18.1",
     "eslint-loader": "^2.0.0",
     "fs-extra": "^5.0.0",
