--- a/package.json
+++ b/package.json
@@ -26,21 +26,21 @@
     "lint": "eslint ./src"
   },
   "dependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
     "@types/jest": "^25.1.2",
     "@zeplin/extension-model": "^2.18.1",
     "adm-zip": "^0.5.16",
     "ajv": "^8.17.1",
-    "babel-jest": "^25.1.0",
-    "babel-loader": "^8.0.6",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^10.0.0",
     "case": "^1.6.3",
     "chalk": "^4.1.2",
     "ci-info": "^4.2.0",
     "commander": "^2.14.1",
     "core-js": "^3.41.0",
-    "eslint": "^4.18.1",
-    "eslint-loader": "^2.0.0",
+    "eslint": "^9.25.1",
+    "eslint-webpack-plugin": "^5.0.1",
     "fs-extra": "^11.3.0",
     "http-status-codes": "^2.3.0",
     "jest": "^25.1.0",
@@ -50,9 +50,9 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "update-notifier": "^5.1.0",
-    "webpack": "^4.41.5",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.1.2"
+    "webpack": "^5.99.7",
+    "webpack-dev-server": "^5.2.1",
+    "webpack-merge": "^6.0.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.0",
