--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "jsonwebtoken": "^9.0.2",
     "prismjs": "^1.30.0",
     "prompts": "^2.4.2",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.5",
+    "qs": "^6.14.0",
+    "undici": "^7.8.0",
     "update-notifier": "^5.1.0",
     "webpack": "^5.99.7",
     "webpack-dev-server": "^5.2.1",
@@ -63,7 +63,8 @@
     "extends": "@zeplin/eslint-config/node",
     "rules": {
       "no-process-exit": "off",
-      "no-sync": "off"
+      "no-sync": "off",
+      "class-methods-use-this": "off"
     }
   },
   "eslintIgnore": [
