--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chalk": "^4.1.2",
     "ci-info": "^4.2.0",
     "commander": "^2.14.1",
+    "copy-webpack-plugin": "^13.0.0",
     "core-js": "^3.41.0",
     "eslint-webpack-plugin": "^5.0.1",
     "fs-extra": "^11.3.0",
