--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zem",
-  "version": "1.3.1",
+  "version": "2.0.0-beta.0",
   "description": "Create, test and publish Zeplin extensions with no build configuration",
   "homepage": "https://zeplin.io",
   "keywords": [
@@ -28,7 +28,7 @@
   "dependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
-    "@zeplin/extension-model": "^2.18.1",
+    "@zeplin/extension-model": "^3.0.0",
     "adm-zip": "^0.5.16",
     "ajv": "^8.17.1",
     "babel-jest": "^29.7.0",
