--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "zem",
-  "version": "2.0.0-beta.0",
+  "version": "2.0.0-beta.1",
   "description": "Create, test and publish Zeplin extensions with no build configuration",
   "homepage": "https://zeplin.io",
+  "type": "module",
   "keywords": [
     "zeplin",
     "zeplin-extension",
@@ -31,6 +32,7 @@
     "@zeplin/extension-model": "^3.0.0",
     "adm-zip": "^0.5.16",
     "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "babel-jest": "^29.7.0",
     "babel-loader": "^10.0.0",
     "case": "^1.6.3",
